--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,8 +5,10 @@ main{
     background-image: url(https://images.ctfassets.net/hrltx12pl8hq/28ECAQiPJZ78hxatLTa7Ts/2f695d869736ae3b0de3e56ceaca3958/free-nature-images.jpg?fit=fill&w=1200&h=630);
     margin: 50px;
     height: 500px;
+    
 }
 .button{
     text-align: center;
-    padding-top: 100px;
+    margin-top: 50px;
+    /* padding-top: 100px; */
 }
